--- a/src/components/Spinner/spiner.scss
+++ b/src/components/Spinner/spiner.scss
@@ -3,7 +3,7 @@
   width: 100px;
   height: 100px;
   background: transparent;
-  margin: 0 auto;
+  margin: 100px auto;
 
   .spinner{
     position: absolute;
