--- a/src/components/search-panel/search.scss
+++ b/src/components/search-panel/search.scss
@@ -23,7 +23,11 @@
       margin-left: 30%;
     }
     &-search {
-
+      
     }
   }
+}
+
+.css-nz481w-MuiInputBase-input-MuiInput-input {
+  background-color: #c62828;
 }
