--- a/src/components/HeroesItem/heroesItem.scss
+++ b/src/components/HeroesItem/heroesItem.scss
@@ -22,19 +22,20 @@
     margin-left: 40px;
   }
   &__btn {
-    width: 100px;
-    height: 40px;
-    background-color: green;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 30px;
+    
     &:hover a {
       color: gainsboro;
     }
     a {
       text-decoration: none;
       color: #fff;
+      width: 100px;
+      height: 40px;
+      background-color: #c62828;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 30px;
     }
   }
 }
